--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <div id="container">
-    <div class="container" id="main-conteiner">
+    <div class="container" id="main-container">
 <!--        <figure id="colorissimo-logo"><img src="img/csm_logo-colorissimo_a27d999076.png" alt="colorissimo-logo"></figure>-->
 
         <!-- Nav tabs -->
