--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -22,7 +22,7 @@
 <figure><img id="colorissimo-logo" src="img/csm_logo-colorissimo_a27d999076.png" alt="colorissimo-logo"></figure>
         
         <div id="logandreg">
-            <ul class="nav nav-tabs" role="tablist" id="myTabs">
+            <ul class="nav nav-tabs my-tab" role="tablist" id="myTabs">
                 <li role="presentation" class="active text-uppercase"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
                 <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
             </ul>
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                         <button type="submit" class="btn" id="btn-log">ZALOGUJ SIĘ</button>
-                            <a href="#remind">Nie pamiętasz hasła?</a>
+                            <a id="link-remind" href="#remind">Nie pamiętasz hasła?</a>
                     </form>
 
                 </div>
