--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -50,7 +50,7 @@
                                 </label>
                             </div>
                         </div>
-                        <button type="submit" class="btn" id="btn-log">ZALOGUJ SIĘ</button>
+                        <button type="submit" class="btn btn-default" id="btn-log">ZALOGUJ SIĘ</button>
                             <a id="link-remind" href="#remind">Nie pamiętasz hasła?</a>
                     </form>
 
@@ -132,7 +132,7 @@
                         Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
                         </label>
                         </div>
-                            <button type="submit" class="btn" id="btn-reg">ZAREJESTRUJ SIĘ</button>
+                            <button type="submit" class="btn btn-default" id="btn-reg">ZAREJESTRUJ SIĘ</button>
                     </form>
                 </div>
             </div>
