--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -14,144 +14,143 @@
 </head>
 
 <body>
-    <div class="container" id="main-container">
+    <div class="container" id="auth-container">
         <figure><img id="logo" src="img/csm_logo-colorissimo_a27d999076.png" alt="logo"></figure>
-        <div id="logandreg">
-            <ul class="nav nav-tabs my-tab" role="tablist" id="myTabs">
-                <li role="presentation" class="active text-uppercase"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
-                <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
-                <li role="presentation" class="text-uppercase" id="remind-panel"><a href="#settings" aria-controls="remind" role="tab" data-toggle="tab">Przypomnienie hasła</a></li>
-            </ul>
+        <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active text-uppercase" id="log-panel"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
 
-            <!-- Tab panes -->
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="log">
-                    <form action="">
-                        <div class="form-group">
-                            <label for="user" class="sr-only"></label>
-                            <input class="form-control input-lg" type="text" id="user" placeholder="ID użytkownika">
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="sr-only">
+            <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
+
+            <li role="presentation" class="hide text-uppercase" id="remind-panel">
+                <a href="#remind" aria-controls="remind" role="tab" data-toggle="tab">Przypomnienie hasła</a></li>
+        </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="log">
+                <form action="">
+                    <div class="form-group">
+                        <label for="user" class="sr-only"></label>
+                        <input class="form-control input-lg" type="text" id="user" placeholder="ID użytkownika">
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="sr-only">
                     </label>
-                            <div id="password-div">
-                                <!--                                    <span id="password-preview"></span>-->
-                                <input class="form-control input-lg" type="password" id="password" placeholder="Hasło">
-                            </div>
+                        <div id="password-div">
+                            <input class="form-control input-lg" type="password" id="password" placeholder="Hasło">
                         </div>
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
                                   <input type="checkbox"> Zapamiętaj mnie
                                 </label>
-                            </div>
                         </div>
-                        <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">ZALOGUJ SIĘ</button>
-                        <button type="button" class="btn btn-link btn-block" id="link-remind">Nie pamiętasz hasła?</button>
-                    </form>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="register">
-                    <form action="">
-                        <h2>Informacje o firmie</h2>
-                        <div class="form-group">
-                            <label for="companyName" class="sr-only"></label>
-                            <input class="form-control" type="text" id="companyName" placeholder="Nazwa firmy">
-                        </div>
-                        <div class="form-group">
-                            <label for="street" class="sr-only"></label>
-                            <input class="form-control" type="text" id="street" placeholder="Ulica">
-                        </div>
-                        <div class="form-group">
-                            <label for="city" class="sr-only"></label>
-                            <input class="form-control" type="text" id="city" placeholder="Miasto">
-                        </div>
-                        <div class="form-group">
-                            <label for="zip" class="sr-only"></label>
-                            <input class="form-control" type="number" id="zip" placeholder="Kod pocztowy">
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class="sr-only"></label>
-                            <input class="form-control" type="email" id="email" placeholder="E-mail">
-                        </div>
-                        <div class="form-group">
-                            <label for="phone" class="sr-only"></label>
-                            <input class="form-control" type="tel" id="phone" placeholder="Telefon">
-                        </div>
-                        <div class="form-group">
-                            <label for="mobile" class="sr-only"></label>
-                            <input class="form-control" type="tel" id="mobile" placeholder="Telefon kom.">
-                        </div>
-                        <div class="form-group">
-                            <label for="fax" class="sr-only"></label>
-                            <input class="form-control" type="text" id="fax" placeholder="Fax">
-                        </div>
-                        <div class="form-group">
-                            <label for="website" class="sr-only"></label>
-                            <input class="form-control" type="url" id="website" placeholder="Strona internetowa">
-                        </div>
-                        <h2>Dane osobowe</h2>
-                        <div class="form-group">
-                            <label for="name" class="sr-only"></label>
-                            <input class="form-control" type="text" id="name" placeholder="Imię">
-                        </div>
-                        <div class="form-group">
-                            <label for="surname" class="sr-only"></label>
-                            <input class="form-control" type="text" id="surname" placeholder="Nazwisko">
-                        </div>
-                        <div class="form-group">
-                            <label for="yourEmail" class="sr-only"></label>
-                            <input class="form-control" type="email" id="yourEmail" placeholder="Twój e-mail">
-                        </div>
-                        <div class="form-group">
-                            <label for="yourEmail" class="sr-only"></label>
-                            <input class="form-control" type="text" id="position" placeholder="Stanowisko">
-                        </div>
-                        <h2>Hasło</h2>
-                        <div class="form-group">
-                            <label for="password" class="sr-only">
+                    </div>
+                    <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">ZALOGUJ SIĘ</button>
+                    <button type="button" class="btn btn-link btn-block" id="link-remind" >Nie pamiętasz hasła?</button>
+                </form>
+            </div>
+            <div role="tabpanel" class="tab-pane" id="register">
+                <form action="">
+                    <h2>Informacje o firmie</h2>
+                    <div class="form-group">
+                        <label for="companyName" class="sr-only"></label>
+                        <input class="form-control" type="text" id="companyName" placeholder="Nazwa firmy">
+                    </div>
+                    <div class="form-group">
+                        <label for="street" class="sr-only"></label>
+                        <input class="form-control" type="text" id="street" placeholder="Ulica">
+                    </div>
+                    <div class="form-group">
+                        <label for="city" class="sr-only"></label>
+                        <input class="form-control" type="text" id="city" placeholder="Miasto">
+                    </div>
+                    <div class="form-group">
+                        <label for="zip" class="sr-only"></label>
+                        <input class="form-control" type="number" id="zip" placeholder="Kod pocztowy">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="sr-only"></label>
+                        <input class="form-control" type="email" id="email" placeholder="E-mail">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone" class="sr-only"></label>
+                        <input class="form-control" type="tel" id="phone" placeholder="Telefon">
+                    </div>
+                    <div class="form-group">
+                        <label for="mobile" class="sr-only"></label>
+                        <input class="form-control" type="tel" id="mobile" placeholder="Telefon kom.">
+                    </div>
+                    <div class="form-group">
+                        <label for="fax" class="sr-only"></label>
+                        <input class="form-control" type="text" id="fax" placeholder="Fax">
+                    </div>
+                    <div class="form-group">
+                        <label for="website" class="sr-only"></label>
+                        <input class="form-control" type="url" id="website" placeholder="Strona internetowa">
+                    </div>
+                    <h2>Dane osobowe</h2>
+                    <div class="form-group">
+                        <label for="name" class="sr-only"></label>
+                        <input class="form-control" type="text" id="name" placeholder="Imię">
+                    </div>
+                    <div class="form-group">
+                        <label for="surname" class="sr-only"></label>
+                        <input class="form-control" type="text" id="surname" placeholder="Nazwisko">
+                    </div>
+                    <div class="form-group">
+                        <label for="yourEmail" class="sr-only"></label>
+                        <input class="form-control" type="email" id="yourEmail" placeholder="Twój e-mail">
+                    </div>
+                    <div class="form-group">
+                        <label for="yourEmail" class="sr-only"></label>
+                        <input class="form-control" type="text" id="position" placeholder="Stanowisko">
+                    </div>
+                    <h2>Hasło</h2>
+                    <div class="form-group">
+                        <label for="password" class="sr-only">
                     </label>
-                            <div id="password-div">
-                                <!--                                    <span id="password-preview"></span>-->
-                                <input class="form-control" type="password" id="password" placeholder="Hasło">
-                            </div>
+                        <div id="password-div">
+                            <!--                                    <span id="password-preview"></span>-->
+                            <input class="form-control" type="password" id="password" placeholder="Hasło">
                         </div>
-                        <div class="checkbox" id="check1">
-                            <label for="defaultCheck2">
+                    </div>
+                    <div class="checkbox" id="check1">
+                        <label for="defaultCheck2">
                             <input type="checkbox" value="" id="defaultCheck1">
                         Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
                         </label>
-                        </div>
-                        <div class="checkbox" id="check2">
-                            <label for="defaultCheck2">
+                    </div>
+                    <div class="checkbox" id="check2">
+                        <label for="defaultCheck2">
                             <input type="checkbox" value="" id="defaultCheck2">
                         Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
                         </label>
-                        </div>
-                        <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg">ZAREJESTRUJ SIĘ</button>
-                    </form>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="remind">
-                    <form action="">
-                        <h2>Nie pamiętasz hasła?</h2>
-                        <div class="form-group">
-                            <label for="emailName" class="sr-only"></label>
-                            <input class="form-control" type="email" id="emailName" placeholder="E-mail">
-                        </div>
-                        <div class="form-group">
-                            <label for="codeName" class="sr-only"></label>
-                            <input class="form-control" type="text" id="codeName" placeholder="Wpisz kod">
-                        </div>
-                         <button type="button" class="btn btn-link btn-block" id="link-return">Powrót do strony logowania</button>
-                    </form>
-                </div>
-
+                    </div>
+                    <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg">ZAREJESTRUJ SIĘ</button>
+                </form>
             </div>
-        </div>
-        <div>
+            <div role="tabpanel" class="tab-pane" id="remind">
+                <form action="">
+                    <h2>Nie pamiętasz hasła?</h2>
+                    <div class="form-group">
+                        <label for="emailName" class="sr-only"></label>
+                        <input class="form-control" type="email" id="emailName" placeholder="E-mail">
+                    </div>
+                    <div class="form-group">
+                        <label for="codeName" class="sr-only"></label>
+                        <input class="form-control" type="text" id="codeName" placeholder="Wpisz kod">
+                    </div>
+                    <button type="button" class="btn btn-link btn-block" id="link-return" >Powrót do strony logowania</button>
+                </form>
+            </div>
 
         </div>
     </div>
+    <div>
 
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
