--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -34,17 +34,16 @@
                         <input class="form-control input-lg" type="text" id="user" placeholder="ID użytkownika">
                     </div>
                     <div class="form-group">
-                        <label for="password" class="sr-only">
-                    </label>
+                        <label for="log-password" class="sr-only"></label>
                         <div id="password-div">
-                            <input class="form-control input-lg" type="password" id="password" placeholder="Hasło">
+                            <input class="form-control input-lg" type="password" id="log-password" placeholder="Hasło">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
                             <label>
-                                  <input type="checkbox"> Zapamiętaj mnie
-                                </label>
+                                <input type="checkbox"> Zapamiętaj mnie
+                            </label>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">ZALOGUJ SIĘ</button>
@@ -109,11 +108,10 @@
                     </div>
                     <h2>Hasło</h2>
                     <div class="form-group">
-                        <label for="password" class="sr-only">
+                        <label for="reg-password" class="sr-only">
                     </label>
                         <div id="password-div">
-                            <!--                                    <span id="password-preview"></span>-->
-                            <input class="form-control" type="password" id="password" placeholder="Hasło">
+                            <input class="form-control" type="password" id="reg-password" placeholder="Hasło">
                         </div>
                     </div>
                     <div class="checkbox" id="check1">
