--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -17,11 +17,11 @@
     <div class="container" id="auth-container">
         <figure><img id="logo" src="img/csm_logo-colorissimo_a27d999076.png" alt="logo"></figure>
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active text-uppercase" id="log-panel"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
+            <li role="presentation" class="active" id="log-panel"><a href="#log" aria-controls="log" role="tab" data-toggle="tab">Zaloguj się</a></li>
 
-            <li role="presentation" class="text-uppercase"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
+            <li role="presentation"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Zarejestruj&nbsp;się</a></li>
 
-            <li role="presentation" class="hide text-uppercase" id="remind-panel">
+            <li role="presentation" class="hide" id="remind-panel">
                 <a href="#remind" aria-controls="remind" role="tab" data-toggle="tab">Przypomnienie hasła</a></li>
         </ul>
 
