--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="form-group">
                         <label for="zip" class="sr-only"></label>
-                        <input class="form-control" type="number" id="zip" placeholder="Kod pocztowy">
+                        <input class="form-control" type="text" id="zip" placeholder="Kod pocztowy">
                     </div>
                     <div class="form-group">
                         <label for="email" class="sr-only"></label>
@@ -114,17 +114,21 @@
                             <input class="form-control" type="password" id="reg-password" placeholder="Hasło">
                         </div>
                     </div>
-                    <div class="checkbox" id="check1">
-                        <label for="defaultCheck2">
-                            <input type="checkbox" value="" id="defaultCheck1">
+                    <div class="form-group">
+                        <div class="checkbox" id="check1">
+                            <label for="defaultCheck2">
+                                <input type="checkbox" value="" id="defaultCheck1">
                         Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
-                        </label>
+                            </label>
+                        </div>
                     </div>
                     <div class="checkbox" id="check2">
-                        <label for="defaultCheck2">
-                            <input type="checkbox" value="" id="defaultCheck2">
+                       <div class="form-group">
+                            <label for="defaultCheck2">
+                                <input type="checkbox" value="" id="defaultCheck2">
                         Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
-                        </label>
+                                </label>
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg">ZAREJESTRUJ SIĘ</button>
                 </form>
