--- a/dantex/index.html
+++ b/dantex/index.html
@@ -28,18 +28,18 @@
             <section id="icon">
                 <figure id="first-icon">
                     <img src="img/newsletter.svg" class="icons" alt="naewsletter">
-                    <h2>Header One</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
+                    <h2>Aktualności na bieżąco</h2>
+                    <p>Na bieżąco informujemy o wszystkich naszych nowych inwestycjach! </p>
                 </figure>
                 <figure id="second-icon">
                     <img src="img/mobile-phone.svg" class="icons" alt="mobile-phone">
-                    <h2>Header Two</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
+                    <h2>Promocje</h2>
+                    <p>Newsletter zawiera informacje o najnowszych promocjach na mieszkania lub lokale usługowe.</p>
                 </figure>
                 <figure id="third-icon">
                     <img src="img/investment.svg" class="icons" alt="investment">
-                    <h2>Header Three</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</p>
+                    <h2>Oferty specjalne</h2>
+                    <p>Oferty specjalne w pierwszej kolejności wysyłane są odbiorcom newslettera.</p>
                 </figure>
             </section>
             <section id="coment">
