--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -130,7 +130,9 @@
                                 </label>
                         </div>
                     </div>
+                    <div class="form-group">
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg">ZAREJESTRUJ SIĘ</button>
+                    </div>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="remind">
