--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -45,8 +45,9 @@
                                 <input type="checkbox"> Zapamiętaj mnie
                             </label>
                         </div>
-                    </div>
+                    </div><div class="form-group">
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">ZALOGUJ SIĘ</button>
+                    </div>
                     <button type="button" class="btn btn-link btn-block" id="link-remind" >Nie pamiętasz hasła?</button>
                 </form>
             </div>
