--- a/dantex/index.html
+++ b/dantex/index.html
@@ -61,17 +61,20 @@
             <form action="form.php" method="post">
                 <div class="label-style">
                    <input id="answer1" type="radio" name="answer" value="" class="radio-input">
-                    <label class="radio-btn" for="answer1" id="first-label"></label>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem esse similique blanditiis recusandae quia, quo, facilis aliquam consequatur, nulla praesentium, eius sit. Ad, excepturi incidunt accusamus laboriosam ab quis eos asperiores, quae libero modi facere quasi aut.
+                    <label class="radio-btn" for="answer1" id="first-label"></label>Zbyt często wysyłacie do mnie emaile
                     </div>
                 <div class="label-style">
                    <input id="answer2" type="radio" name="answer" value="" class="radio-input">
-                    <label class="radio-btn" for="answer2" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</div>
+                    <label class="radio-btn" for="answer2" id=""></label>Przesyłane treści nie są dla mnie interesujące </div>
                 <div class="label-style">
                   <input id="answer3" type="radio" name="answer" value="" class="radio-input">
-                   <label class="radio-btn" for="answer3" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.</div>
+                   <label class="radio-btn" for="answer3" id=""></label>Wiadomości od was to spam, który powinien być zgłoszony </div>
+                   <div class="label-style">
+                  <input id="answer4" type="radio" name="answer" value="" class="radio-input">
+                   <label class="radio-btn" for="answer4" id=""></label>Nigdy nie zapisywałem się na tę listę mailingową </div>
                 <div class="label-style">
-                    <input id="answer4" type="radio" name="answer" value="" class="radio-input">
-                    <label class="radio-btn" for="answer4" id=""></label>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eleifend efficitur elit, eget porttitor diam finibus ac.
+                    <input id="answer5" type="radio" name="answer" value="" class="radio-input">
+                    <label class="radio-btn" for="answer5" id=""></label>Inny powód
                     <textarea maxlength="1000"></textarea>
                 </div>
                 <button id="send" class="button btn-red long-button">WYŚLIJ I WYPISZ MNIE Z NEWSLETTERA</button>
