--- a/dantex/index.html
+++ b/dantex/index.html
@@ -32,7 +32,7 @@
                     <p>Na bieżąco informujemy o wszystkich naszych nowych inwestycjach! </p>
                 </figure>
                 <figure id="second-icon">
-                    <img src="img/phone.svg" class="icons" alt="mobile-phone">
+                    <img src="img/phonex.png" class="icons" alt="mobile-phone">
                     <h2>Promocje</h2>
                     <p>Newsletter zawiera informacje o najnowszych promocjach na mieszkania lub lokale usługowe.</p>
                 </figure>
