--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -48,10 +48,10 @@
                     </div>
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">
                         <span>ZALOGUJ SIĘ</span>
-                        <div class="sk-double-bounce">
-                            <div class="sk-child sk-double-bounce1"></div>
-                            <div class="sk-child sk-double-bounce2"></div>
-                        </div>
+                        <div class="spinner">
+  <div class="double-bounce1"></div>
+  <div class="double-bounce2"></div>
+</div>
                     </button>
                     <button type="button" class="btn btn-link btn-block" id="link-remind" >Nie pamiętasz hasła?</button>
                 </form>
