--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
   <div class="double-bounce2"></div>
 </div>
                     </button>
-                    <button type="button" class="btn btn-link btn-block" id="link-remind" >Nie pamiętasz hasła?</button>
+                    <button type="button" class="btn btn-link btn-block" id="link-remind">Nie pamiętasz hasła?</button>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="register">
@@ -128,7 +129,7 @@
                             </label>
                         </div>
                     </div>
-                     <div class="form-group">
+                    <div class="form-group">
                         <div class="checkbox" id="check2">
                             <label for="defaultCheck2">
                                 <input type="checkbox" value="" id="defaultCheck2">
@@ -136,7 +137,11 @@
                                 </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg">ZAREJESTRUJ SIĘ</button>
+                    <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-reg"><span>ZAREJESTRUJ SIĘ</span>
+                    <div class="spinner">
+  <div class="double-bounce1"></div>
+  <div class="double-bounce2"></div>
+</div></button>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="remind">
@@ -150,7 +155,9 @@
                         <label for="codeName" class="sr-only"></label>
                         <input class="form-control" type="text" id="codeName" placeholder="Wpisz kod">
                     </div>
-                    <button type="button" class="btn btn-link btn-block" id="link-return" >Powrót do strony logowania</button>
+                    <div class="g-recaptcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
+                    </div>
+                    <button type="button" class="btn btn-link btn-block" id="link-return">Powrót do strony logowania</button>
                 </form>
             </div>
 
