--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -155,8 +155,15 @@
                         <label for="codeName" class="sr-only"></label>
                         <input class="form-control" type="text" id="codeName" placeholder="Wpisz kod">
                     </div>
+                    <div class="form-group">
                     <div class="g-recaptcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
                     </div>
+                    </div>
+                    <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-rem"><span>WYŚLIJ</span>
+                    <div class="spinner">
+  <div class="double-bounce1"></div>
+  <div class="double-bounce2"></div>
+</div></button>
                     <button type="button" class="btn btn-link btn-block" id="link-return">Powrót do strony logowania</button>
                 </form>
             </div>
