--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -56,6 +56,8 @@
                     </button>
                     <button type="button" class="btn btn-link btn-block" id="link-remind">Nie pamiętasz hasła?</button>
                 </form>
+                <div class="message">
+                </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="register">
                 <form action="">
@@ -173,7 +175,10 @@
     <div>
 
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
