--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -53,7 +53,12 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div>
-                    </button>
+  </button>
+                   <div class="form-group">
+                    <div class="alert alert-danger" role="alert">
+  Nieprawidłowy login lub hasło
+</div>
+                    </div>
                     <button type="button" class="btn btn-link btn-block" id="link-remind">Nie pamiętasz hasła?</button>
                 </form>
                 <div class="message">
