--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -69,7 +69,7 @@
                     <h2>Informacje o firmie</h2>
                     <div class="form-group">
                         <label for="companyName" class="sr-only"></label>
-                        <input class="form-control" type="text" id="companyName" required  min="3" placeholder="Nazwa firmy">
+                        <input class="form-control" type="text" id="companyName" name="companyName" required  minlength="3" placeholder="Nazwa firmy">
                     </div>
                     <div class="form-group">
                         <label for="street" class="sr-only"></label>
@@ -183,8 +183,8 @@
 
     </div>
   <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  src="https://code.jquery.com/jquery-1.12.4.js"
+  integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
